# Software-Rasterizer

./: CMakeLists.txt  README.md  main.cpp
application/: CMakeLists.txt  application.cpp  application.h  camera.cpp  camera.h  image.cpp  image.h  model.cpp  model.h
global/: base.h
gpu/: CMakeLists.txt  bufferObject.cpp  bufferObject.h  clipper.cpp  clipper.h  dataStructures.h  frameBuffer.cpp  frameBuffer.h  gpu.cpp  gpu.h  raster.cpp  raster.h  shader.cpp  shader.h  texture.cpp  texture.h  vao.cpp  vao.h
gpu/shader/: defaultShader.cpp  defaultShader.h  lightShader.cpp  lightShader.h  textureShader.cpp  textureShader.h
math/: math.h  mathFunctions.h  matrix.h  vector.h
